--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -1,3 +1,10 @@
+
+body{
+    background-color: #F3F4F6 !important;
+}
+.navbar{
+    background-color: #FFFF !important;
+}
 #navbarText{
     font-family: 'Inter', sans-serif;
 }
@@ -5,4 +12,14 @@
     text-decoration: none;
     margin: 0 10px 0 10px;
 
+}
+.principal{
+    padding: 100px 0;
+}
+main h1, p{
+    font-family: 'Inter', sans-serif;
+}
+main h1{
+    font-size: 30px;
+    font-weight: 800;
 }
