--- a/public/css/master.css
+++ b/public/css/master.css
@@ -55,7 +55,7 @@ ul a {
 }
 .content h2{
     font-weight: 800;
-    margin: 20px 0;
+    margin: 20px 10px;
 }
 
 /*FORMS*/
@@ -64,6 +64,27 @@ ul a {
     color: #FFF !important;
     font-weight: 500;
     font-size: 18px;
+}
+.btn-submit{
+    background-color: #0D6EFD;
+    padding: 10px;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    border-radius: 0.3em;
+    font-weight: 600;
+    color: #FFF;
+}
+.btn-add{
+    margin: 0 10px;
+    text-decoration: none;
+    box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    border-radius: 0.3em;
+    padding: 10px;
+    color: #000;
+}
+.btn-add span{
+    padding: 0 5px;
+    margin: 0;
+    vertical-align: middle;
 }
 
 /*TABLE RESULTADOS*/
