--- a/public/css/master.css
+++ b/public/css/master.css
@@ -91,3 +91,11 @@ ul a {
 .card{
     margin-bottom: 20px;
 }
+.btn-acao-listagem{
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: #0D6EFD;
+    border-radius: 0.3em;
+    color: #FFF;
+    margin-right: 5px;
+}
