--- a/public/css/master.css
+++ b/public/css/master.css
@@ -99,3 +99,19 @@ ul a {
     color: #FFF;
     margin-right: 5px;
 }
+.btn-acao-listagem-danger{
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: rgb(248, 66, 66);
+    border-radius: 0.3em;
+    color: #FFF;
+    margin-right: 5px;
+}
+.btn-acao-listagem-light{
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: #beb4b4;
+    border-radius: 0.3em;
+    color: #000;
+    margin-right: 5px;
+}
