--- a/public/css/master.css
+++ b/public/css/master.css
@@ -115,3 +115,11 @@ ul a {
     color: #000;
     margin-right: 5px;
 }
+.btn-acao-listagem-yellow{
+    text-decoration: none;
+    padding: 5px 10px;
+    background-color: #FFD700;
+    border-radius: 0.3em;
+    color: #000;
+    margin-right: 5px;
+}
