--- a/public/css/master.css
+++ b/public/css/master.css
@@ -96,30 +96,34 @@ ul a {
     padding: 5px 10px;
     background-color: #0D6EFD;
     border-radius: 0.3em;
+    font-size: 15px;
+    font-weight: 700;
     color: #FFF;
     margin-right: 5px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 .btn-acao-listagem-danger{
     text-decoration: none;
     padding: 5px 10px;
     background-color: rgb(248, 66, 66);
     border-radius: 0.3em;
+    font-weight: 700;
+    font-size: 15px;
     color: #FFF;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     margin-right: 5px;
 }
-.btn-acao-listagem-light{
+
+.btn-acao-listagem-secundary{
     text-decoration: none;
+    background-color: rgb(255, 168, 7);
+    border-color: rgba(27, 31, 35, 0.15);
+    border-width: 1px;
+    font-weight: 700;
     padding: 5px 10px;
-    background-color: #beb4b4;
+    font-size: 15px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-radius: 0.3em;
-    color: #000;
-    margin-right: 5px;
-}
-.btn-acao-listagem-yellow{
-    text-decoration: none;
-    padding: 5px 10px;
-    background-color: #FFD700;
-    border-radius: 0.3em;
-    color: #000;
+    color: #fff;
     margin-right: 5px;
 }
