mudança de nome na tabela de titular_debito para titular_conta

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -165,3 +165,11 @@ ul a {
 .card-info span{
     padding-right: 5px;
 }
+
+.accordion-body{
+    text-align: left;
+}
+.accordion-body p {
+    padding: 0;
+    margin: 0;
+}
