--- a/public/css/master.css
+++ b/public/css/master.css
@@ -80,6 +80,7 @@ ul a {
     border-radius: 0.3em;
     padding: 10px;
     color: #000;
+   
 }
 .btn-add span{
     padding: 0 5px;
@@ -90,6 +91,10 @@ ul a {
 /*TABLE RESULTADOS*/
 .card{
     margin-bottom: 20px;
+}
+.card-footer p {
+    padding: 0;
+    margin: 0;
 }
 .btn-acao-listagem{
     text-decoration: none;
@@ -113,7 +118,6 @@ ul a {
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     margin-right: 5px;
 }
-
 .btn-acao-listagem-secundary{
     text-decoration: none;
     background-color: rgb(255, 168, 7);
@@ -141,14 +145,12 @@ ul a {
 .id_table{
     font-size: 14px;
 }
-
 .card-info{
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     padding: 15px 0;
     background-color: #fff;
     border-radius: 1em;
     margin: 15px;
-    
 }
 .card-info h4{
     padding: 0;
@@ -165,11 +167,20 @@ ul a {
 .card-info span{
     padding-right: 5px;
 }
-
 .accordion-body{
     text-align: left;
 }
 .accordion-body p {
     padding: 0;
     margin: 0;
+}
+.resultado-icone{
+    display: flex; /* Usar flexbox para centralizar verticalmente e horizontalmente */
+    align-items: center; /* Centralizar verticalmente */
+    justify-content: center; /* Centralizar horizontalmente */
+    text-align: center; /* Centralizar o texto */
+}
+.resultado-icone span{
+    color: #424250;
+    margin-right: 5px;
 }
