colocado graficos no dashboard falta manipular esses dados no grafico

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -220,4 +220,10 @@ ul a:hover{
     font-weight: 700;
 }
 
+/*DASHBOARD*/
+.graficoDashboard{
+    background-color: #FFF;
+    width: 500px;
+}
+
 
