criacao da view para cadastrar movimentacao e falta terminar a implementacao de cadastrar a movimentacao

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -91,6 +91,14 @@ ul a:hover{
     margin: 0;
     vertical-align: middle;
 }
+.row-form{
+    margin-bottom: 15px;
+}
+.row-form-destacar{
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #EDEDED;
+}
 
 /*TABLE RESULTADOS*/
 .card{
