--- a/public/css/master.css
+++ b/public/css/master.css
@@ -301,6 +301,44 @@ TABLE RESULTADOS
 .btn-icone-listagem span{
     font-size: 20px;
 }
+
+
+
+.separacaoDebitos{
+    text-align: center;
+    border: 1px solid black;
+    background-image: linear-gradient(#a7a7a7, #fff); 
+    width: 100%;
+    border-radius: 0.3em;
+    padding: 15px;
+}
+.separacaoDebitos h5{
+    font-size: 23px;
+    font-weight: 700;
+}
+#data_venda_lote_gestao{
+    padding: 0;
+    margin: 0;
+    font-size: 12px;
+    color: #5f5f5f;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+    background-color: #000; /* Cor de fundo das setas */
+    margin: 0; 
+}
+.carousel-control-prev,
+.carousel-control-next {
+    position: absolute;
+    height: 15px !important;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1; /* Garante que os botões fiquem acima do conteúdo */
+}
+.carousel-item{
+    margin-top: 20px;
+}
 /*-----
 CALENDARIO
 -----*/
