implementado ao cadastrar scraping separar parcelas de receber e pagar baseado na data de venda

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -305,7 +305,7 @@ TABLE RESULTADOS
 
 
 .separacaoDebitos{
-    border: 1px solid #EDEDED;
+    border: 1px solid #b4b4b4;
     width: 100%;
     border-radius: 0.3em;
     padding: 15px;
