implementando dropdown buttons para melhorar usabilidade

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -301,7 +301,9 @@ TABLE RESULTADOS
 .btn-icone-listagem span{
     font-size: 20px;
 }
-
+.dropdown-item{
+    font-size: 15px;
+}
 
 
 .separacaoDebitos{
