arrumando erro no relatorio contas pagar/receber

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -308,7 +308,9 @@ TABLE RESULTADOS
     padding: 10px 15px;
     background-color: #EDEDED;
 }
-
+.tbody-contas{
+    font-size: 14px;
+}
 
 .separacaoDebitos{
     border: 1px solid #b4b4b4;
