--- a/public/css/master.css
+++ b/public/css/master.css
@@ -166,6 +166,18 @@ FORMS
     border-radius: 0.3em;
     color: #fff;
 }
+#removerMovimentacao{
+    padding: 5px 10px;
+    margin: 10px;
+    text-decoration: none;
+    font-weight: 800;
+    background-color:#fd0d0d;
+    border-color: rgba(27, 31, 35, 0.15);
+    border-width: 1px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    border-radius: 0.3em;
+    color: #fff;
+}
 
 /*-----
 TABLE RESULTADOS
