refactor: melhoria dashboard visual

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -3,18 +3,11 @@ GERAL
 -----*/
 
 body{
-    background-color: #F3F4F6 !important;
     font-family: 'Inter', sans-serif !important;
 }
-
-/*-----
-MENU NAVEGAÇÃO
------*/
-
-.navbar{
-    background-color: #FFF;
+.bg-fundo{
+    background-color: #F3F4F6 !important;
 }
-
 /*-----
 OFFCANVAS
 -----*/
@@ -65,55 +58,6 @@ ul a:hover{
 
 }
 
-/*-----
-CONTENT
------*/
-.content{
-    margin: 80px 40px;
-}
-.content h2{
-    font-weight: 800;
-    margin: 20px 10px;
-}
-
-/*-----
-DASHBOARD
------*/
-.graficoDashboard{
-    background-color: #FFF;
-    width: 500px;
-}
-.card-dashboard{
-    margin: 0 0 30px 0;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    border-radius: 0.5em;
-    padding: 20px;
-}
-.card-dashboard span{
-    font-size: 100px;
-}
-.card-dashboard h3{
-    font-weight: 500;
-    font-size: 20px;
-    color: #000;
-}
-.card-ranking{
-    padding: 15px;
-}
-.card-ranking h4{
-    font-size: 20px;
-    font-weight: 700;
-}
-.linha-ranking{
-    border: 1px solid #a5a5a5;
-    padding:10px 15px;
-    border-radius: 0.5em;
-    margin: 5px;
-}
-.linha-ranking p{
-    font-size: 15px;
-    font-weight: 600;
-}
 /*-----
 FORMS
 -----*/
